--- a/google-books-search/package.json
+++ b/google-books-search/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "axios": "^0.19.0",
     "mongo": "^0.1.0",
     "mongod": "^2.0.0",
     "mongoose": "^5.6.5",
+    "morgan": "^1.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
